Improve Fetch and Display Contacts

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="clear">Clear</string>
     <string name="save">Save</string>
     <string name="back">Back</string>
+    <string name="action_show_contacts">Show All Contacts</string>
 
 </resources>
